syntax = "proto3";

option go_package="./;pb";


service Person {
  rpc SayPerson (PersonRequest) returns (stream PersonReply) {}
}

message PersonRequest {
  string name = 1;
}

message PersonReply {
  string message = 1;
}

